[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dce_mri"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3",
    "scipy>=1.16",
    "nibabel",
    "matplotlib>=3.10",
    "pandas",
    "scikit-learn>=1.8",
    "lmfit>=1.3",
    "sympy",
    "tqdm",
    "joblib",
    "dill",
    "networkx",
    "pillow",
    "hdbscan",
    "umap-learn",
    "uncertainties",
    "numba",
    "jax",
    "torch",
]

[project.optional-dependencies]
dev = ["pytest", "ipykernel", "jupyter", "spyder-kernels"]

[tool.setuptools.packages.find]
where = ["src"]